# redegades-forecast-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
mcp_service/: __init__.py  __main__.py  api.py  config.py  database.py  mcp_server.py  models.py  query_filter.py  query_registry.py  scheduler.py
mcp_service/forecasting/: __init__.py  baseline.py  jobs.py  monte_carlo.py
scripts/: init_dummy_db.py  run_forecast_job.py
sql/: ic_orders_lead_time.sql  ic_orders_lead_time_original.sql
